--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "homepage": "https://AddyJaime.github.io/gredykentbarberfrontend",
+  "homepage": "https://addyjaime.github.io/gredykentbarberfrontend/",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
